--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "author": "Talisson Junior",
   "license": "MIT",
   "devDependencies": {
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
     "ts-loader": "^5.0.0",
-    "typescript": "^3.0.3",
+    "tslint": "^5.11.0",
+    "tslint-webpack-plugin": "^1.2.2",
+    "typescript": "^3.1.1",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-merge": "^4.1.4"
