--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "devDependencies": {
     "bootstrap": "^4.1.3",
+    "ionicons": "^4.4.4",
     "jquery": "^3.3.1",
     "ts-loader": "^5.0.0",
     "tslint": "^5.11.0",
